# splitwise-like

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
lkeep/database/alembic/: env.py
lkeep/database/alembic/versions/: 2025_09_08_1013-4f29fc3fbe8a_users.py  2025_09_08_1016-b21f6468b9ef_users.py  2025_09_08_1023-a296aeeca0c1_users.py  2025_09_08_1557-0e95d6a207f5_deleted_secondaty_table.py  2025_09_08_2121-e6558aa381b7_.py  2025_09_08_2124-9cca4467a226_.py  2025_09_09_1509-fc41a83e817c_.py  2025_09_09_1539-e1ccdbe18f46_.py  2025_09_09_1548-1d67d1756aa2_.py  2025_09_09_1600-3bc326ca923d_.py  2025_09_09_1615-6f20572ebd5a_.py  2025_09_10_1228-56fb2da74200_.py  2025_09_10_1237-01f3c71b37cc_.py  2025_09_10_1836-976cf9c31b5e_.py
src/splitwise/: .env  config.py  database.py  logger.py  main.py
src/splitwise/models/: __init__.py  expense.py  group.py  mixins.py  user.py
src/splitwise/routers/: auth.py  expense.py  group.py
src/splitwise/schemas/: expense.py  group.py  user.py
src/splitwise/services/: auth.py  auth_service.py  expense.py  group.py  user.py
src/splitwise/utils/: decorators.py  security.py
